// Persistit akiban_information_schema protobuf extensions description file

import "akiban_information_schema.proto";

package akiban_schema.protobuf;
option java_package = "com.foundationdb.ais.protobuf";
option java_outer_classname = "PersistitProtobuf";

extend Storage {
    optional string tree_name = 2001;
}
